---
source: core/src/ast/modules.rs
expression: "Module::from_syn(&syn::parse_quote!\n{\n    mod ffi\n    {\n        struct NonOpaqueStruct { a: i32, b: Box<NonOpaqueStruct> } impl\n        NonOpaqueStruct\n        {\n            pub fn new(x: i32) -> NonOpaqueStruct { unimplemented!(); } pub fn\n            set_a(&mut self, new_a: i32) { self.a = new_a; }\n        } #[diplomat::opaque] struct OpaqueStruct { a: SomeExternalType } impl\n        OpaqueStruct\n        {\n            pub fn new() -> Box<OpaqueStruct> { unimplemented!(); } pub fn\n            get_string(&self) -> String { unimplemented!() }\n        } pub fn test_function() {} pub fn other_test_function(x : i32) ->\n        NonOpaqueStruct { unimplemented!(); }\n    }\n}, true, None, &SpanLocation::None,)"
---
name:
  - ffi
  - start_line: 1
    column_line: 0
    range:
      start: 0
      end: 0
    span_location: None
imports: []
declared_types:
  ? - NonOpaqueStruct
    - start_line: 1
      column_line: 0
      range:
        start: 0
        end: 0
      span_location: None
  : Struct:
      name:
        - NonOpaqueStruct
        - start_line: 1
          column_line: 0
          range:
            start: 0
            end: 0
          span_location: None
      docs:
        - - cfg: Star
            lines: ""
        - []
      lifetimes: {}
      fields:
        - - - a
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
          - Primitive: i32
          - - - cfg: Star
                lines: ""
            - []
          - {}
        - - - b
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
          - Box:
              Named:
                path:
                  elements:
                    - - NonOpaqueStruct
                      - start_line: 1
                        column_line: 0
                        range:
                          start: 0
                          end: 0
                        span_location: None
                lifetimes: []
          - - - cfg: Star
                lines: ""
            - []
          - {}
      methods:
        - name:
            - new
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
          docs:
            - - cfg: Star
                lines: ""
            - []
          abi_name:
            - NonOpaqueStruct_new
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
          self_param: ~
          self_type:
            path:
              elements:
                - - NonOpaqueStruct
                  - start_line: 1
                    column_line: 0
                    range:
                      start: 0
                      end: 0
                    span_location: None
            lifetimes: []
          params:
            - name:
                - x
                - start_line: 1
                  column_line: 0
                  range:
                    start: 0
                    end: 0
                  span_location: None
              ty:
                Primitive: i32
              attrs: {}
          return_type:
            Named:
              path:
                elements:
                  - - NonOpaqueStruct
                    - start_line: 1
                      column_line: 0
                      range:
                        start: 0
                        end: 0
                      span_location: None
              lifetimes: []
          lifetime_env: {}
          attrs: {}
        - name:
            - set_a
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
          docs:
            - - cfg: Star
                lines: ""
            - []
          abi_name:
            - NonOpaqueStruct_set_a
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
          self_param:
            reference:
              - Anonymous
              - Mutable
            path_type:
              path:
                elements:
                  - - NonOpaqueStruct
                    - start_line: 1
                      column_line: 0
                      range:
                        start: 0
                        end: 0
                      span_location: None
              lifetimes: []
            attrs: {}
          self_type:
            path:
              elements:
                - - NonOpaqueStruct
                  - start_line: 1
                    column_line: 0
                    range:
                      start: 0
                      end: 0
                    span_location: None
            lifetimes: []
          params:
            - name:
                - new_a
                - start_line: 1
                  column_line: 0
                  range:
                    start: 0
                    end: 0
                  span_location: None
              ty:
                Primitive: i32
              attrs: {}
          return_type: ~
          lifetime_env: {}
          attrs: {}
      output_only: false
      attrs: {}
  ? - OpaqueStruct
    - start_line: 1
      column_line: 0
      range:
        start: 0
        end: 0
      span_location: None
  : Opaque:
      name:
        - OpaqueStruct
        - start_line: 1
          column_line: 0
          range:
            start: 0
            end: 0
          span_location: None
      docs:
        - - cfg: Star
            lines: ""
        - []
      lifetimes: {}
      methods:
        - name:
            - new
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
          docs:
            - - cfg: Star
                lines: ""
            - []
          abi_name:
            - OpaqueStruct_new
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
          self_param: ~
          self_type:
            path:
              elements:
                - - OpaqueStruct
                  - start_line: 1
                    column_line: 0
                    range:
                      start: 0
                      end: 0
                    span_location: None
            lifetimes: []
          params: []
          return_type:
            Box:
              Named:
                path:
                  elements:
                    - - OpaqueStruct
                      - start_line: 1
                        column_line: 0
                        range:
                          start: 0
                          end: 0
                        span_location: None
                lifetimes: []
          lifetime_env: {}
          attrs: {}
        - name:
            - get_string
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
          docs:
            - - cfg: Star
                lines: ""
            - []
          abi_name:
            - OpaqueStruct_get_string
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
          self_param:
            reference:
              - Anonymous
              - Immutable
            path_type:
              path:
                elements:
                  - - OpaqueStruct
                    - start_line: 1
                      column_line: 0
                      range:
                        start: 0
                        end: 0
                      span_location: None
              lifetimes: []
            attrs: {}
          self_type:
            path:
              elements:
                - - OpaqueStruct
                  - start_line: 1
                    column_line: 0
                    range:
                      start: 0
                      end: 0
                    span_location: None
            lifetimes: []
          params: []
          return_type:
            Named:
              path:
                elements:
                  - - String
                    - start_line: 1
                      column_line: 0
                      range:
                        start: 0
                        end: 0
                      span_location: None
              lifetimes: []
          lifetime_env: {}
          attrs: {}
      mutability: Immutable
      attrs: {}
      dtor_abi_name:
        - OpaqueStruct_destroy
        - ~
declared_traits: {}
declared_functions:
  ? - other_test_function
    - start_line: 1
      column_line: 0
      range:
        start: 0
        end: 0
      span_location: None
  : name:
      - other_test_function
      - start_line: 1
        column_line: 0
        range:
          start: 0
          end: 0
        span_location: None
    abi_name:
      - diplomat_external_other_test_function
      - start_line: 1
        column_line: 0
        range:
          start: 0
          end: 0
        span_location: None
    params:
      - name:
          - x
          - start_line: 1
            column_line: 0
            range:
              start: 0
              end: 0
            span_location: None
        ty:
          Primitive: i32
        attrs: {}
    output_type:
      Named:
        path:
          elements:
            - - NonOpaqueStruct
              - start_line: 1
                column_line: 0
                range:
                  start: 0
                  end: 0
                span_location: None
        lifetimes: []
    lifetimes: {}
    attrs: {}
    docs:
      - - cfg: Star
          lines: ""
      - []
  ? - test_function
    - start_line: 1
      column_line: 0
      range:
        start: 0
        end: 0
      span_location: None
  : name:
      - test_function
      - start_line: 1
        column_line: 0
        range:
          start: 0
          end: 0
        span_location: None
    abi_name:
      - diplomat_external_test_function
      - start_line: 1
        column_line: 0
        range:
          start: 0
          end: 0
        span_location: None
    params: []
    output_type: ~
    lifetimes: {}
    attrs: {}
    docs:
      - - cfg: Star
          lines: ""
      - []
sub_modules: []
attrs: {}
